Introduced the base for KSP compiler tests